login and register form create with state

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Students Profile Box - By Saeid</title>
+    <title>Students Profile Box - By Jahidul Islam Saeid</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
